--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  fl_chart: ^0.68.0
+  pdf: ^3.6.0 # Update as needed
+  excel: ^2.0.0 # Update as needed
+  provider: ^6.1.2
+  path_provider: ^2.0.0
+  flutter_local_notifications: ^17.2.1
+  http: ^0.13.3
+  intl: ^0.19.0
+  image_picker: ^0.8.4+4
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
